--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,7 @@
     "version_number": "1.0.0",
     "website_url": "",
     "description": "accesorios para la gangangan",
-    "dependencies": ["YMC_MHZ-MoreHead-1.3.0"]
+    "dependencies": [
+        "YMC_MHZ-MoreHead-1.3.0"
+    ]
 }
