--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "gangangan MoreHead",
     "version_number": "1.0.0",
-    "website_url": "",
+    "website_url": "https://github.com/Ardi3k/Grangangan-MoreHead",
     "description": "accesorios para la gangangan",
     "dependencies": [
         "YMC_MHZ-MoreHead-1.3.0"
