--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "ganganganMoreHead",
-    "version_number": "0.1.0",
+    "version_number": "0.3.1",
     "website_url": "https://github.com/Ardi3k/Grangangan-MoreHead",
-    "description": "accesorios para la gangangan. Two new accessories: Whatsapp logo and 1000 yard stare",
+    "description": "Accessories of an amateur for my friends",
     "dependencies": [
         "YMC_MHZ-MoreHead-1.3.0"
     ]
